--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn global add serve && serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
